--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Raleway:wght@300&family=Righteous&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Raleway:wght@300&family=Righteous&display=swap&family=Poiret+One&display=swap"
       rel="stylesheet"
     />
     <!--
@@ -21,6 +21,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
